# brightcon-2023-talks

./: .gitignore  Infrastructure.md  README.md
feedback/: 2023-09-20 Debrief.md  Brightcon 2023 - Tell us about your experience! (Responses).xlsx  Brightcon 2023 - Tell us about your experience! (online) (Responses).xlsx  README.md
sessions/SQL_schema/: README.ipynb  README.md  database.db  export_routine.ipynb  import_routine.ipynb
sessions/brightway_documentation/: brightcon_2023_weinold_documentation.ipynb
sessions/open_source_MFA/: Brighcon2023_NielenMcDowall.pptx
sessions/prospective_lca/: premise_recipe.yaml
sessions/prospective_lca/premise/: introduction.ipynb
sessions/social_footprint/: EXIOBASE social footprint 8.14.2023 Commented.ipynb  tsf_x.xlsx
talks/AYCE/: ayce_workshop.ipynb
talks/UsingGTDR/: BONSAI_Climate_Footprint_Analyser_API_demo.ipynb  requirements.txt
talks/cycling_randonneur/: Adventures in data exchange.ipynb
talks/ilcd_importer/: brightcon.ipynb  ilcd11_ecoinvent37.csv  ilcd_env.yml  readme.md  requirements.yml
talks/llm_tuesday_9_15am/: LLM-LCA-Brightcon-2023.ipynb  pyproject.toml  requirements.txt
talks/parquet/: base_fns.py  bw_processing_parquet.ipynb
talks/pyecospold_and_pyilcd/: LICENSE  README.md  pyecospold_and_pyilcd.ipynb  requirements.txt
talks/pyecospold_and_pyilcd/config/: pyecospold_config.ini  pyilcd_config.ini
talks/pyecospold_and_pyilcd/data/: pyecospold_v1.xml  pyecospold_v1_invalid.xml  pyilcd_contact.xml  pyilcd_contact_invalid.xml
